recipe-frontend/src/app/features/recipe/recipe-detail/recipe-detail.scss
.recipe-page {
  max-width: 1200px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  padding: 1.5rem;
}

.recipe-image {
  width: 100%;
  height: clamp(250px, 35vw, 350px);
  object-fit: cover;
  object-position: center;
  object-fit: cover;
  border-radius: 16px;
}

.recipe-hero__content {
  display: flex;
  // gap: 2rem;
  justify-content: space-between;
  align-items: center;
  margin-left: 2vw;
  font-size: clamp(1.5rem, 2vw + 1rem, 2rem);
}

.recipe-hero__info {
  flex: 1;
}

.recipe-hero__title {
  margin: 0;
}

.recipe-description {
  margin: 0.5vh 0;
  font-weight: 300;
}

.recipe-meta {
  margin-top: 0;
}

.recipe-hero__user-actions {
  display: flex;
  gap: 5vw;
  margin-left: 2vw;
}

.recipe-hero__like-btn {
  width: 40px;
  height: 40px;
  border: none;
  box-shadow: none;
  background: transparent;
  border-radius: 50%;
  cursor: pointer;
  transition:
    background 0.2s ease,
    transform 0.2s ease;

  &:hover {
    background: rgba(0, 0, 0, 0.08);
    transform: scale(1.1);
  }

  &:active {
    transform: scale(0.95);
  }
}

.recipe-hero__like-btn:hover {
  background: rgba(244, 67, 54, 0.08); // subtle red tint
  transform: scale(1.1);
}

.liked {
  color: #e53935;
}

.recipe__action__div {
  display: flex;
  gap: 0;
  align-items: center;
}

.recipe-content {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 1.5rem;
}

.recipe-content__title {
  font-size: clamp(1.5rem, 2vw + 1rem, 2rem);
}

.ingredients-list,
.directions-list {
  display: flex;
  flex-direction: column;
  gap: 0.75rem;
  font-size: clamp(1rem, 2vw + 1rem, 1.5rem);
}

@media (max-width: 900px) {
  .recipe-hero__content {
    flex-direction: column;
  }

  .recipe-content {
    grid-template-columns: 1fr;
  }

  .recipe-image {
    width: 90%;
  }
}

